# QuickPlot

./: .gitignore  CMakeLists.txt  Doxygen.in  README.md  conf.py  flake.nix  index.rst
.github/workflows/: doxygen.yml  pr.yml
.github/workflows/qc/: action.yml
hooks/: pre-commit
src/: AxisModel.qml  CMakeLists.txt  LineModel.qml  LogAxisModel.cpp  ScatterModel.qml  axis.cpp  axis.h  axisTickLabels.cpp  axisTickLabels.h  lineGeometry.cpp  lineGeometry.h  logAxis.cpp  logAxis.h  main.cpp  main.qml  mainpage.md  plotGeometry.cpp  plotGeometry.h  scatterGeometry.cpp  scatterGeometry.h  solid.cpp  solid.h  triangle.cpp  triangle.h  vector3.h
src/markers/: CMakeLists.txt  cube.cpp  cube.h  diamond.cpp  diamond.h  marker.cpp  marker.h
tests/: CMakeLists.txt  axis.cpp  quads.cpp  triangles.cpp
